# daily

./: .gitignore  CLI.md  CONFIGURATION.md  LICENSE  README.md  WEBUI.md  daily-tool.md  pyproject.toml  requirements.txt
config/: daily.yaml  text_overlays.yaml
daily/: cli.py  color.py  config.py  daily.py  encode.py  processor.py  sequence.py  slate.py  text.py  timecode.py  webui.py
daily/config/: codecs.yaml  daily.yaml  text_elements.yaml
example/: LICENSE-ASSETS.md
example/input/Shot_0010/: Shot_0010.1001.exr  Shot_0010.1002.exr  Shot_0010.1003.exr  Shot_0010.1004.exr  Shot_0010.1005.exr  Shot_0010.1006.exr  Shot_0010.1007.exr  Shot_0010.1008.exr  Shot_0010.1009.exr  Shot_0010.1010.exr  Shot_0010.1011.exr  Shot_0010.1012.exr  Shot_0010.1013.exr  Shot_0010.1014.exr  Shot_0010.1015.exr  Shot_0010.1016.exr  Shot_0010.1017.exr  Shot_0010.1018.exr  Shot_0010.1019.exr  Shot_0010.1020.exr  Shot_0010.1021.exr  Shot_0010.1022.exr  Shot_0010.1023.exr  Shot_0010.1024.exr  Shot_0010.1025.exr  Shot_0010.1026.exr  Shot_0010.1027.exr  Shot_0010.1028.exr  Shot_0010.1029.exr  Shot_0010.1030.exr  Shot_0010.1031.exr  Shot_0010.1032.exr  Shot_0010.1033.exr  Shot_0010.1034.exr  Shot_0010.1035.exr  Shot_0010.1036.exr  Shot_0010.1037.exr  Shot_0010.1038.exr  Shot_0010.1039.exr  Shot_0010.1040.exr  (+8 more)
src/: __main__.py  cli.py  color.py  sequence.py  text.py
